# SamudraBGC

./: .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  Ocean_Emulator_PCA.code-workspace  PAPER_EXPERIMENTS.md  README.md  cleanup_duplicates.py  environment.yml  eval_exp1a.sh  eval_exp1b.sh  eval_model.sh  full_w01.sh  perturb_restart_files.py  pyproject.toml  reorganize_existing_outputs.py  reorganize_experiments.py  rest_w01.sh  run_all_tier1.sh  run_experiment.sh  run_mae_baseline.sh  run_mae_control.sh  run_mae_grad_h01_h200.sh  run_mae_grad_h025_h200.sh  run_mae_grad_w01.sh  run_mae_grad_w025.sh  run_model.sh  run_model_baseline.sh  run_tier1_exp1a.sh  run_tier1_exp1b.sh  run_tier1_exp1c.sh  run_tier1_exp1d.sh  slurmjob.sh
.deprecated/code_paper/: fig01_3d_schematic_chl.py  fig01_3d_schematic_chl.sh  fig01_3d_schematic_uv.py  fig01_3d_schematic_uv.sh  fig01_domain_biomes.py  fig01_panels.py  fig02_late_rollout.py  fig02_late_rollout.sh  fig02_supplementary.py  fig02_supplementary.sh  fig04.py  fig04_bgc_pdf.py  fig04_bgc_pdf.sh  fig04_bis.sh  (+4 more)
code_paper/: FIGURES.md  README.md  biomes_utils.py  env_setup.sh  fig00_inmos_presentation.py  fig01_3d_schematic.py  fig01_3d_schematic.sh  fig01_3d_schematic_chl.sh  fig01_3d_schematic_uv.sh  fig01_domain_biomes.sh  fig01_domain_biomes_v2.py  fig01_domain_biomes_v2.sh  fig01_panels.py  fig02.py  fig02.sh  fig02_animation.py  fig02_animation.sh  fig02_bis.py  fig02_bis.sh  fig02_late_rollout.sh  fig02_supplementary.sh  fig02_ter.py  fig02_ter.sh  fig02_v2.py  fig02_v2.sh  fig02_v3.py  fig02_v3.sh  fig03.py  fig03_ablation_tree.py  fig03_ablation_tree.sh  fig03_lollipop.py  fig04.py  fig04.sh  fig04_bgc_pdf.py  fig04_bgc_pdf.sh  fig04_bis.py  fig04_bis.sh  fig04_design_choices.py  fig04_design_choices.sh  fig04_v2.py  (+15 more)
configs/: eval_exp1a.yaml  eval_mom6dg.yaml  train_default_2step.test.yaml  train_mom6dg.yaml  train_mom6dg_mae.yaml  train_mom6dg_mae_60ep_control.yaml  train_mom6dg_mae_grad_60ep.yaml  train_mom6dg_mae_grad_w01.yaml  train_mom6dg_mae_grad_w025.yaml
configs.backup.20251124/: eval_exp1b.yaml  eval_mom6dg.yaml  eval_om4.yaml  eval_om4_halfdeg.yaml  slurm_perlmutter_train_cm4.yaml  slurm_perlmutter_train_om4.yaml  train_default.test.yaml  train_default_2step.test.yaml  train_fomo.test.yaml  train_mom6dg.yaml  train_mom6dg_JRA.yaml  train_mom6dg_mae_control_full.yaml  train_mom6dg_mae_grad_w01_full.yaml  train_om4.yaml  train_om4_fomo.yaml  train_om4_halfdeg.yaml  viz_om4.yaml  viz_om4_halfdeg.yaml
docs/: EXPERIMENTS.md  RELEASE_PLAN.md  anomaly_dataset.md  snider_bodner.md
scripts/: COLLABORATIVE_METRICS_README.md  QUICKSTART_comparison.md  README_comparison.md  RECHUNK_README.md  cleanup_for_release.sh  compare_coarsened_vs_original.py  compare_rollouts.py  compute_20day_metrics.py  compute_collaborative_metrics.py  compute_depth_weighted_r2.py  compute_weidong_rmse.py  create_animations.py  create_anomaly_dataset.py  create_eval_subset.py  finalize_rechunk.sh  fit_pca.py  interpolate_to_fine_grid.py  plot_persistence_comparison.py  rechunk_anomaly_dataset.py  rechunk_jra.sh  rechunk_jra_to_daily.py  repair_stats.py  run_data_integrity_check.sh  visualize_comparison.py  zip_zarr.py
tests/: conftest.py  test_loss.py  test_pca.py  test_stepper.py  test_trainer.py  test_utils_data.py
(+761 files in other folders)
